# tds_project1

./: Dockerfile  LICENSE  main.py  pyproject.toml
data/: comments.txt  contacts-sorted.json  contacts.json  dates.txt  email.txt  format.html  format.md  logs-recent.txt  task_history.db  ticket-sales.db
data/docs/: index.json
data/docs/but/: buy.md  control.md  fall.md  key.md  know.md  minute.md  need.md  policy.md  series.md  small.md
data/docs/college/: arrive.md  boy.md  but.md  end.md  head.md  out.md  project.md  tell.md  total.md  word.md
data/docs/day/: alone.md  break.md  gas.md  member.md  network.md  particularly.md  so.md  teacher.md  those.md  try.md
data/docs/executive/: Democrat.md  ago.md  each.md  model.md  need.md  open.md  popular.md  relate.md  strong.md  subject.md
data/docs/hot/: avoid.md  describe.md  father.md  five.md  forward.md  huge.md  paper.md  there.md  throughout.md  write.md
data/docs/law/: child.md  feel.md  for.md  give.md  population.md  region.md  rest.md  time.md  while.md  writer.md
data/docs/method/: exist.md  floor.md  international.md  now.md  require.md  since.md  spring.md  up.md  wife.md  without.md
data/docs/movement/: answer.md  eight.md  factor.md  group.md  health.md  senior.md  staff.md  task.md  though.md  wear.md
data/docs/theory/: bill.md  candidate.md  guess.md  he.md  like.md  physical.md  price.md  set.md  step.md  technology.md
data/docs/turn/: ago.md  assume.md  course.md  husband.md  lawyer.md  magazine.md  member.md  on.md  push.md  significant.md
